# sv2-bitcoin-core

./: .gitignore  Cargo.toml  README.md  build.rs
capnp/: mining.capnp
examples/: logger.rs
src/: error.rs  lib.rs  template_data.rs
